--- a/ProjectCG/ProjectCG.vcxproj.filters
+++ b/ProjectCG/ProjectCG.vcxproj.filters
@@ -48,5 +48,17 @@
     <ClCompile Include="src\Week2\Exercise2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Week3\Example31.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Week3\Example32.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Week3\Exercise31.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Week3\Exercise32.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
