--- a/ProjectCG/ProjectCG.vcxproj
+++ b/ProjectCG/ProjectCG.vcxproj
@@ -88,6 +88,10 @@
     <ClCompile Include="src\Week2\Example3.cpp" />
     <ClCompile Include="src\Week2\Exercise1.cpp" />
     <ClCompile Include="src\Week2\Exercise2.cpp" />
+    <ClCompile Include="src\Week3\Example31.cpp" />
+    <ClCompile Include="src\Week3\Example32.cpp" />
+    <ClCompile Include="src\Week3\Exercise31.cpp" />
+    <ClCompile Include="src\Week3\Exercise32.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
