--- a/ProjectCG/ProjectCG.vcxproj.filters
+++ b/ProjectCG/ProjectCG.vcxproj.filters
@@ -60,5 +60,17 @@
     <ClCompile Include="src\Week3\Exercise32.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Week4\Example41.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Week4\Example42.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Week4\Example43.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Week4\Exercise41.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
