--- a/ProjectCG/ProjectCG.vcxproj.filters
+++ b/ProjectCG/ProjectCG.vcxproj.filters
@@ -93,5 +93,11 @@
     <ClCompile Include="src\Week5\Exercise53.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Week6\Example61.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Week6\Example62.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
