--- a/ProjectCG/ProjectCG.vcxproj
+++ b/ProjectCG/ProjectCG.vcxproj
@@ -10,8 +10,11 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\Source.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{A28C8FC8-2897-43A0-8116-99BBAD244E73}</ProjectGuid>
+    <ProjectGuid>{43898923-DF4C-4998-8164-1E7E6AD114AE}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>ProjectCG</RootNamespace>
   </PropertyGroup>
@@ -51,10 +54,11 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>GLUT_BUILDING_LIB;WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>GLUT_BUILDING_LIB;WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>NotSet</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>opengl32.lib;glu32.lib;glut32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
@@ -67,45 +71,16 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="src\Source.cpp" />
-    <ClCompile Include="src\Week1\Ex1.cpp" />
-    <ClCompile Include="src\Week1\Ex2.cpp" />
-    <ClCompile Include="src\Week1\Ex3.cpp" />
-    <ClCompile Include="src\Week1\Ex4.cpp" />
-    <ClCompile Include="src\Week1\Exercise11.cpp" />
-    <ClCompile Include="src\Week2\Example1.cpp" />
-    <ClCompile Include="src\Week2\Example2.cpp" />
-    <ClCompile Include="src\Week2\Example3.cpp" />
-    <ClCompile Include="src\Week2\Exercise1.cpp" />
-    <ClCompile Include="src\Week2\Exercise2.cpp" />
-    <ClCompile Include="src\Week3\Example31.cpp" />
-    <ClCompile Include="src\Week3\Example32.cpp" />
-    <ClCompile Include="src\Week3\Exercise31.cpp" />
-    <ClCompile Include="src\Week3\Exercise32.cpp" />
-    <ClCompile Include="src\Week4\Example43.cpp" />
-    <ClCompile Include="src\Week4\Exercise41.cpp" />
-    <ClCompile Include="src\Week4\Example41.cpp" />
-    <ClCompile Include="src\Week4\Example42.cpp" />
-    <ClCompile Include="src\Week5\Example50.cpp" />
-    <ClCompile Include="src\Week5\Example501_TestLookAtOrtho.cpp" />
-    <ClCompile Include="src\Week5\Exercise51.cpp" />
-    <ClCompile Include="src\Week5\Example52.cpp" />
-    <ClCompile Include="src\Week5\Example53.cpp" />
-    <ClCompile Include="src\Week5\Exercise52.cpp" />
-    <ClCompile Include="src\Week5\Exercise53.cpp" />
-    <ClCompile Include="src\Week6\Example61.cpp" />
-    <ClCompile Include="src\Week6\Example62.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
